add options   for   the sellers , what kind of products are they selling

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -45,11 +45,23 @@
         "description": "অনন্য কারুশিল্প বিক্রি বা কেনা শুরু করতে Artisan-এ যোগ দিন।",
         "avatar_label": "একটি প্রোফাইল ছবি আপলোড করুন",
         "username_label": "ব্যবহারকারীর নাম",
-        "username_placeholder": "যেমন, SellerPriya",
+        "username_placeholder": "যেমন, PriyaKumar",
         "email_label": "ইমেল",
         "email_placeholder": "m@example.com",
         "phone_label": "ফোন নম্বর",
         "phone_placeholder": "যেমন, 9876543210",
+        "phone2_label": "দ্বিতীয় ফোন নম্বর (বাধ্যতামূলক)",
+        "phone2_placeholder": "একটি বিকল্প ফোন নম্বর লিখুন",
+        "address_label": "ঠিকানা",
+        "address_placeholder": "আপনার সম্পূর্ণ ঠিকানা লিখুন",
+        "product_category_label": "পণ্যের বিভাগ",
+        "product_category_placeholder": "আপনার পণ্যের বিভাগ নির্বাচন করুন",
+        "category_paintings": "চিত্রಕಲೆ",
+        "category_pottery": "মৃৎশিল্প",
+        "category_textiles": "বস্ত্র",
+        "category_jewelry": "গহনা",
+        "category_woodcraft": "কাঠের কাজ",
+        "category_other": "অন্যান্য",
         "create_password_label": "পাসওয়ার্ড তৈরি করুন",
         "confirm_password_label": "পাসওয়ার্ড নিশ্চিত করুন",
         "create_account_button": "অ্যাকাউন্ট তৈরি করুন",
@@ -78,10 +90,17 @@
     "verification_page": {
         "title": "অ্যাকাউন্ট যাচাইকরণ",
         "description": "আপনার পণ্য বিক্রি করতে এবং অর্থপ্রদান পেতে, দয়া করে আপনার পরিচয় যাচাই করুন।",
-        "card_title": "নথি আপলোড করুন",
-        "card_description": "এটি আমাদের সকলের জন্য একটি নিরাপদ বাজার বজায় রাখতে সাহায্য করে।",
-        "gov_id_label": "সরকারি আইডি যাচাইকরণ",
-        "gov_id_description": "নিরাপত্তা নিশ্চিত করতে এবং জালিয়াতি রোধ করতে, অনুগ্রহ করে একটি সরকারি আইডি (যেমন, আধার, প্যান) আপলোড করুন।",
+        "aadhaar_title": "আধার যাচাইকরণ",
+        "aadhaar_description": "আপনার পরিচয় যাচাই করতে, দয়া করে আপনার আধার বিবরণ প্রদান করুন।",
+        "aadhaar_label": "আধার নম্বর",
+        "aadhaar_placeholder": "আপনার ১২-সংখ্যার আধার নম্বর লিখুন",
+        "pan_title": "প্যান কার্ড যাচাইকরণ",
+        "pan_description": "ব্যবসার উদ্দেশ্যে, দয়া করে আপনার প্যান কার্ডের বিবরণ প্রদান করুন।",
+        "pan_label": "প্যান নম্বর",
+        "pan_placeholder": "আপনার ১০-সংখ্যার প্যান নম্বর লিখুন",
+        "digilocker_button": "ডিজি-লকার দিয়ে যাচাই করুন",
+        "address_proof_title": "ঠিকানার প্রমাণ",
+        "address_proof_description": "আপনার ঠিকানা নিশ্চিত করতে একটি সাম্প্রতিক ইউটিলিটি বিল বা ব্যাংক স্টেটমেন্ট আপলোড করুন।",
         "upload_prompt": "আপলোড করতে ফাইলে ক্লিক করুন বা টেনে আনুন",
         "submit_button": "যাচাইয়ের জন্য জমা দিন"
     },
