--- a/src/lib/locales/en.json
+++ b/src/lib/locales/en.json
@@ -45,11 +45,23 @@
         "description": "Join Artisan to start selling or buying unique crafts.",
         "avatar_label": "Upload a Profile Picture",
         "username_label": "Username",
-        "username_placeholder": "e.g., SellerPriya",
+        "username_placeholder": "e.g., PriyaKumar",
         "email_label": "Email",
         "email_placeholder": "m@example.com",
         "phone_label": "Phone Number",
         "phone_placeholder": "e.g., 9876543210",
+        "phone2_label": "Second Phone Number (Mandatory)",
+        "phone2_placeholder": "Enter an alternate phone number",
+        "address_label": "Address",
+        "address_placeholder": "Enter your full address",
+        "product_category_label": "Product Category",
+        "product_category_placeholder": "Select your product category",
+        "category_paintings": "Paintings",
+        "category_pottery": "Pottery",
+        "category_textiles": "Textiles",
+        "category_jewelry": "Jewelry",
+        "category_woodcraft": "Woodcraft",
+        "category_other": "Other",
         "create_password_label": "Create Password",
         "confirm_password_label": "Confirm Password",
         "create_account_button": "Create Account",
@@ -78,10 +90,17 @@
     "verification_page": {
         "title": "Account Verification",
         "description": "To sell your products and receive payments, please verify your identity.",
-        "card_title": "Upload Document",
-        "card_description": "This helps us maintain a secure marketplace for everyone.",
-        "gov_id_label": "Government ID Verification",
-        "gov_id_description": "To ensure security and prevent fraud, please upload a government-issued ID (e.g., Aadhar, PAN).",
+        "aadhaar_title": "Aadhaar Verification",
+        "aadhaar_description": "To verify your identity, please provide your Aadhaar details.",
+        "aadhaar_label": "Aadhaar Number",
+        "aadhaar_placeholder": "Enter your 12-digit Aadhaar number",
+        "pan_title": "PAN Card Verification",
+        "pan_description": "For business purposes, please provide your PAN card details.",
+        "pan_label": "PAN Number",
+        "pan_placeholder": "Enter your 10-digit PAN number",
+        "digilocker_button": "Verify with DigiLocker",
+        "address_proof_title": "Address Proof",
+        "address_proof_description": "Upload a recent utility bill or bank statement to confirm your address.",
         "upload_prompt": "Click or drag file to upload",
         "submit_button": "Submit for Verification"
     },
