--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -45,11 +45,23 @@
         "description": "अद्वितीय शिल्प बेचना या खरीदना शुरू करने के लिए आर्टिसन से जुड़ें।",
         "avatar_label": "एक प्रोफ़ाइल चित्र अपलोड करें",
         "username_label": "उपयोगकर्ता नाम",
-        "username_placeholder": "उदा., SellerPriya",
+        "username_placeholder": "उदा., PriyaKumar",
         "email_label": "ईमेल",
         "email_placeholder": "m@example.com",
         "phone_label": "फ़ोन नंबर",
         "phone_placeholder": "उदा., 9876543210",
+        "phone2_label": "दूसरा फ़ोन नंबर (अनिवार्य)",
+        "phone2_placeholder": "एक वैकल्पिक फ़ोन नंबर दर्ज करें",
+        "address_label": "पता",
+        "address_placeholder": "अपना पूरा पता दर्ज करें",
+        "product_category_label": "उत्पाद श्रेणी",
+        "product_category_placeholder": "अपनी उत्पाद श्रेणी चुनें",
+        "category_paintings": "चित्रकला",
+        "category_pottery": "मिट्टी के बर्तन",
+        "category_textiles": "कपड़ा",
+        "category_jewelry": "आभूषण",
+        "category_woodcraft": "काष्ठकला",
+        "category_other": "अन्य",
         "create_password_label": "पासवर्ड बनाएं",
         "confirm_password_label": "पासवर्ड की पुष्टि करें",
         "create_account_button": "खाता बनाएं",
@@ -78,10 +90,17 @@
     "verification_page": {
         "title": "खाता सत्यापन",
         "description": "अपने उत्पादों को बेचने और भुगतान प्राप्त करने के लिए, कृपया अपनी पहचान सत्यापित करें।",
-        "card_title": "दस्तावेज़ अपलोड करें",
-        "card_description": "यह हमें सभी के लिए एक सुरक्षित बाज़ार बनाए रखने में मदद करता है।",
-        "gov_id_label": "सरकारी आईडी सत्यापन",
-        "gov_id_description": "सुरक्षा सुनिश्चित करने और धोखाधड़ी को रोकने के लिए, कृपया एक सरकारी आईडी (जैसे, आधार, पैन) अपलोड करें।",
+        "aadhaar_title": "आधार सत्यापन",
+        "aadhaar_description": "अपनी पहचान सत्यापित करने के लिए, कृपया अपना आधार विवरण प्रदान करें।",
+        "aadhaar_label": "आधार संख्या",
+        "aadhaar_placeholder": "अपना 12-अंकीय आधार नंबर दर्ज करें",
+        "pan_title": "पैन कार्ड सत्यापन",
+        "pan_description": "व्यावसायिक उद्देश्यों के लिए, कृपया अपना पैन कार्ड विवरण प्रदान करें।",
+        "pan_label": "पैन संख्या",
+        "pan_placeholder": "अपना 10-अंकीय पैन नंबर दर्ज करें",
+        "digilocker_button": "डिजी-लॉकर से सत्यापित करें",
+        "address_proof_title": "पते का प्रमाण",
+        "address_proof_description": "अपना पता सत्यापित करने के लिए हाल का उपयोगिता बिल या बैंक स्टेटमेंट अपलोड करें।",
         "upload_prompt": "अपलोड करने के लिए फ़ाइल पर क्लिक करें या खींचें",
         "submit_button": "सत्यापन के लिए सबमिट करें"
     },
