--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -45,11 +45,23 @@
         "description": "अद्वितीय हस्तकला विकणे किंवा खरेदी करणे सुरू करण्यासाठी आर्टिसनमध्ये सामील व्हा.",
         "avatar_label": "एक प्रोफाइल चित्र अपलोड करा",
         "username_label": "वापरकर्तानाव",
-        "username_placeholder": "उदा. SellerPriya",
+        "username_placeholder": "उदा. PriyaKumar",
         "email_label": "ईमेल",
         "email_placeholder": "m@example.com",
         "phone_label": "फोन नंबर",
         "phone_placeholder": "उदा. 9876543210",
+        "phone2_label": "दुसरा फोन नंबर (अनिवार्य)",
+        "phone2_placeholder": "एक पर्यायी फोन नंबर प्रविष्ट करा",
+        "address_label": "पत्ता",
+        "address_placeholder": "तुमचा पूर्ण पत्ता प्रविष्ट करा",
+        "product_category_label": "उत्पादन श्रेणी",
+        "product_category_placeholder": "तुमची उत्पादन श्रेणी निवडा",
+        "category_paintings": "चित्रकला",
+        "category_pottery": "मातीची भांडी",
+        "category_textiles": "कापड",
+        "category_jewelry": "दागिने",
+        "category_woodcraft": "लाकूडकाम",
+        "category_other": "इतर",
         "create_password_label": "पासवर्ड तयार करा",
         "confirm_password_label": "पासवर्डची पुष्टी करा",
         "create_account_button": "खाते तयार करा",
@@ -78,10 +90,17 @@
     "verification_page": {
         "title": "खाते पडताळणी",
         "description": "तुमची उत्पादने विकण्यासाठी आणि पेमेंट मिळवण्यासाठी, कृपया तुमची ओळख सत्यापित करा.",
-        "card_title": "दस्तऐवज अपलोड करा",
-        "card_description": "हे आम्हाला प्रत्येकासाठी सुरक्षित बाजारपेठ राखण्यास मदत करते.",
-        "gov_id_label": "सरकारी ओळखपत्र पडताळणी",
-        "gov_id_description": "सुरक्षितता सुनिश्चित करण्यासाठी आणि फसवणूक टाळण्यासाठी, कृपया सरकारी ओळखपत्र (उदा. आधार, पॅन) अपलोड करा.",
+        "aadhaar_title": "आधार पडताळणी",
+        "aadhaar_description": "तुमची ओळख सत्यापित करण्यासाठी, कृपया तुमचे आधार तपशील प्रदान करा.",
+        "aadhaar_label": "आधार क्रमांक",
+        "aadhaar_placeholder": "तुमचा १२-अंकी आधार क्रमांक प्रविष्ट करा",
+        "pan_title": "पॅन कार्ड पडताळणी",
+        "pan_description": "व्यवसायाच्या उद्देशाने, कृपया तुमचे पॅन कार्ड तपशील प्रदान करा.",
+        "pan_label": "पॅन क्रमांक",
+        "pan_placeholder": "तुमचा १०-अंकी पॅन क्रमांक प्रविष्ट करा",
+        "digilocker_button": "डिजी-लॉकरसह सत्यापित करा",
+        "address_proof_title": "पत्त्याचा पुरावा",
+        "address_proof_description": "तुमचा पत्ता conferण्यासाठी अलीकडील युटिलिटी बिल किंवा बँक स्टेटमेंट अपलोड करा.",
         "upload_prompt": "अपलोड करण्यासाठी फाइलवर क्लिक करा किंवा ड्रॅग करा",
         "submit_button": "पडताळणीसाठी सबमिट करा"
     },
