--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -45,11 +45,23 @@
         "description": "தனித்துவமான கைவினைப்பொருட்களை விற்க அல்லது வாங்க Artisan இல் சேரவும்.",
         "avatar_label": "சுயவிவரப் படத்தைப் பதிவேற்றவும்",
         "username_label": "பயனர்பெயர்",
-        "username_placeholder": "எ.கா., SellerPriya",
+        "username_placeholder": "எ.கா., PriyaKumar",
         "email_label": "மின்னஞ்சல்",
         "email_placeholder": "m@example.com",
         "phone_label": "தொலைபேசி எண்",
         "phone_placeholder": "எ.கா., 9876543210",
+        "phone2_label": "இரண்டாவது தொலைபேசி எண் (கட்டாயம்)",
+        "phone2_placeholder": "ஒரு மாற்று தொலைபேசி எண்ணை உள்ளிடவும்",
+        "address_label": "முகவரி",
+        "address_placeholder": "உங்கள் முழு முகவரியை உள்ளிடவும்",
+        "product_category_label": "தயாரிப்பு வகை",
+        "product_category_placeholder": "உங்கள் தயாரிப்பு வகையைத் தேர்ந்தெடுக்கவும்",
+        "category_paintings": "ஓவியங்கள்",
+        "category_pottery": "மட்பாண்டம்",
+        "category_textiles": "ஜவுளி",
+        "category_jewelry": "நகைகள்",
+        "category_woodcraft": "மரவேலை",
+        "category_other": "மற்றவை",
         "create_password_label": "கடவுச்சொல்லை உருவாக்கவும்",
         "confirm_password_label": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
         "create_account_button": "கணக்கை உருவாக்கவும்",
@@ -78,10 +90,17 @@
     "verification_page": {
         "title": "கணக்கு சரிபார்ப்பு",
         "description": "உங்கள் தயாரிப்புகளை விற்க மற்றும் பணம் பெற, உங்கள் அடையாளத்தைச் சரிபார்க்கவும்.",
-        "card_title": "ஆவணத்தைப் பதிவேற்றவும்",
-        "card_description": "இது அனைவருக்கும் பாதுகாப்பான சந்தையை பராமரிக்க எங்களுக்கு உதவுகிறது.",
-        "gov_id_label": "அரசு அடையாள அட்டை சரிபார்ப்பு",
-        "gov_id_description": "பாதுகாப்பை உறுதி செய்வதற்கும் மோசடியைத் தடுப்பதற்கும், தயவுசெய்து அரசு வழங்கிய அடையாள அட்டையை (எ.கா. ஆதார், பான்) பதிவேற்றவும்.",
+        "aadhaar_title": "ஆதார் சரிபார்ப்பு",
+        "aadhaar_description": "உங்கள் அடையாளத்தைச் சரிபார்க்க, தயவுசெய்து உங்கள் ஆதார் விவரங்களை வழங்கவும்.",
+        "aadhaar_label": "ஆதார் எண்",
+        "aadhaar_placeholder": "உங்கள் 12 இலக்க ஆதார் எண்ணை உள்ளிடவும்",
+        "pan_title": "பான் கார்டு சரிபார்ப்பு",
+        "pan_description": "வணிக நோக்கங்களுக்காக, தயவுசெய்து உங்கள் பான் கார்டு விவரங்களை வழங்கவும்.",
+        "pan_label": "பான் எண்",
+        "pan_placeholder": "உங்கள் 10 இலக்க பான் எண்ணை உள்ளிடவும்",
+        "digilocker_button": "டிஜிலாக்கர் மூலம் சரிபார்க்கவும்",
+        "address_proof_title": "முகவரிச் சான்று",
+        "address_proof_description": "உங்கள் முகவரியை உறுதிப்படுத்த சமீபத்திய பயன்பாட்டு மசோதா அல்லது வங்கி அறிக்கையைப் பதிவேற்றவும்.",
         "upload_prompt": "பதிவேற்ற கோப்பைக் கிளிக் செய்யவும் அல்லது இழுக்கவும்",
         "submit_button": "சரிபார்ப்புக்குச் சமர்ப்பிக்கவும்"
     },
