--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -45,11 +45,23 @@
         "description": "ప్రత్యేకమైన చేతిపనులను విక్రయించడం లేదా కొనడం ప్రారంభించడానికి ఆర్టిసాన్‌లో చేరండి.",
         "avatar_label": "ఒక ప్రొఫైల్ చిత్రాన్ని అప్‌లోడ్ చేయండి",
         "username_label": "వినియోగదారు పేరు",
-        "username_placeholder": "ఉదా., SellerPriya",
+        "username_placeholder": "ఉదా., PriyaKumar",
         "email_label": "ఇమెయిల్",
         "email_placeholder": "m@example.com",
         "phone_label": "ఫోను నంబరు",
         "phone_placeholder": "ఉదా., 9876543210",
+        "phone2_label": "రెండవ ఫోన్ నంబర్ (తప్పనిసరి)",
+        "phone2_placeholder": "ఒక ప్రత్యామ్నాయ ఫోన్ నంబర్‌ను నమోదు చేయండి",
+        "address_label": "చిరునామా",
+        "address_placeholder": "మీ పూర్తి చిరునామాను నమోదు చేయండి",
+        "product_category_label": "ఉత్పత్తి వర్గం",
+        "product_category_placeholder": "మీ ఉత్పత్తి వర్గాన్ని ఎంచుకోండి",
+        "category_paintings": "పెయింటింగ్స్",
+        "category_pottery": "కుండలు",
+        "category_textiles": "వస్త్రాలు",
+        "category_jewelry": "నగలు",
+        "category_woodcraft": "చెక్కపని",
+        "category_other": "ఇతర",
         "create_password_label": "పాస్‌వర్డ్‌ను సృష్టించండి",
         "confirm_password_label": "పాస్‌వర్డ్‌ను నిర్ధారించండి",
         "create_account_button": "ఖాతాను సృష్టించండి",
@@ -78,10 +90,17 @@
     "verification_page": {
         "title": "ఖాతా ధృవీకరణ",
         "description": "మీ ఉత్పత్తులను విక్రయించడానికి మరియు చెల్లింపులను స్వీకరించడానికి, దయచేసి మీ గుర్తింపును ధృవీకరించండి.",
-        "card_title": "పత్రాన్ని అప్‌లోడ్ చేయండి",
-        "card_description": "ఇది ప్రతిఒక్కరికీ సురక్షితమైన మార్కెట్‌ప్లేస్‌ను నిర్వహించడానికి మాకు సహాయపడుతుంది.",
-        "gov_id_label": "ప్రభుత్వ ID ధృవీకరణ",
-        "gov_id_description": "భద్రతను నిర్ధారించడానికి మరియు మోసాన్ని నివారించడానికి, దయచేసి ప్రభుత్వ-జారీ చేసిన IDని (ఉదా., ఆధార్, పాన్) అప్‌లోడ్ చేయండి.",
+        "aadhaar_title": "ఆధార్ ధృవీకరణ",
+        "aadhaar_description": "మీ గుర్తింపును ధృవీకరించడానికి, దయచేసి మీ ఆధార్ వివరాలను అందించండి.",
+        "aadhaar_label": "ఆధార్ సంఖ్య",
+        "aadhaar_placeholder": "మీ 12-అంకెల ఆధార్ సంఖ్యను నమోదు చేయండి",
+        "pan_title": "పాన్ కార్డ్ ధృవీకరణ",
+        "pan_description": "వ్యాపార ప్రయోజనాల కోసం, దయచేసి మీ పాన్ కార్డ్ వివరాలను అందించండి.",
+        "pan_label": "పాన్ సంఖ్య",
+        "pan_placeholder": "మీ 10-అంకెల పాన్ సంఖ్యను నమోదు చేయండి",
+        "digilocker_button": "డిజిలాకర్‌తో ధృవీకరించండి",
+        "address_proof_title": "చిరునామా రుజువు",
+        "address_proof_description": "మీ చిరునామాను నిర్ధారించడానికి ఇటీవలి యుటిలిటీ బిల్లు లేదా బ్యాంక్ స్టేట్‌మెంట్‌ను అప్‌లోడ్ చేయండి.",
         "upload_prompt": "అప్‌లోడ్ చేయడానికి ఫైల్‌పై క్లిక్ చేయండి లేదా లాగండి",
         "submit_button": "ధృవీకరణ కోసం సమర్పించండి"
     },
