--- a/src/lib/locales/ur.json
+++ b/src/lib/locales/ur.json
@@ -9,7 +9,7 @@
         "features_title": "جدید کاریگر کے لیے خصوصیات",
         "features_subtitle": "تصویر سے کہانی تک، ہمارا AI آپ کے کام کی روح کو ظاہر کرنے کے لیے تربیت یافتہ ہے۔",
         "feature_1_title": "AI تصویری تجزیہ",
-        "feature_1_desc": "ایک تصویر اپ لوڈ کریں اور فوری طور पर ایک زبردست تفصیل اور ٹیگز حاصل کریں۔",
+        "feature_1_desc": "ایک تصویر اپ لوڈ کریں اور فوری طور پر ایک زبردست تفصیل اور ٹیگز حاصل کریں۔",
         "feature_2_title": "آواز سے کہانی",
         "feature_2_desc": "اپنی کہانی سنائیں، اور ہمارا AI اسے ایک دلکش داستان میں بہتر بنائے گا۔",
         "feature_3_title": "سمارٹ تجزیات",
@@ -45,11 +45,23 @@
         "description": "منفرد دستکاری بیچنے یا خریدنے کے لیے آرٹیسن میں شامل ہوں۔",
         "avatar_label": "ایک پروفائل تصویر اپ لوڈ کریں",
         "username_label": "صارف نام",
-        "username_placeholder": "مثلاً SellerPriya",
+        "username_placeholder": "مثلاً PriyaKumar",
         "email_label": "ای میل",
         "email_placeholder": "m@example.com",
         "phone_label": "فون نمبر",
         "phone_placeholder": "مثلاً 9876543210",
+        "phone2_label": "دوسرا فون نمبر (لازمی)",
+        "phone2_placeholder": "ایک متبادل فون نمبر درج کریں",
+        "address_label": "پتہ",
+        "address_placeholder": "اپنا مکمل پتہ درج کریں",
+        "product_category_label": "مصنوعات کی قسم",
+        "product_category_placeholder": "اپنی مصنوعات کی قسم منتخب کریں",
+        "category_paintings": "پینٹنگز",
+        "category_pottery": "مٹی کے برتن",
+        "category_textiles": "ٹیکسٹائلز",
+        "category_jewelry": "زیورات",
+        "category_woodcraft": "لکڑی کا کام",
+        "category_other": "دیگر",
         "create_password_label": "پاس ورڈ بنائیں",
         "confirm_password_label": "پاس ورڈ کی تصدیق کریں",
         "create_account_button": "اکاؤنٹ بنائیں",
@@ -78,10 +90,17 @@
     "verification_page": {
         "title": "اکاؤنٹ کی تصدیق",
         "description": "اپنی مصنوعات فروخت کرنے اور ادائیگیاں وصول کرنے کے لیے، براہ کرم اپنی شناخت کی تصدیق کریں۔",
-        "card_title": "دستاویز اپ لوڈ کریں",
-        "card_description": "یہ ہمیں سب کے لیے ایک محفوظ بازار برقرار رکھنے میں مدد کرتا ہے۔",
-        "gov_id_label": "سرکاری شناختی کارڈ کی تصدیق",
-        "gov_id_description": "سیکیورٹی کو یقینی بنانے اور دھوکہ دہی کو روکنے کے لیے، براہ کرم ایک سرکاری شناختی کارڈ (مثلاً آدھار، پین) اپ لوڈ کریں۔",
+        "aadhaar_title": "آدھار کی تصدیق",
+        "aadhaar_description": "اپنی شناخت کی تصدیق کے لیے، براہ کرم اپنی آدھار کی تفصیلات فراہم کریں۔",
+        "aadhaar_label": "آدھار نمبر",
+        "aadhaar_placeholder": "اپنا 12 ہندسوں کا آدھار نمبر درج کریں",
+        "pan_title": "پین کارڈ کی تصدیق",
+        "pan_description": "کاروباری مقاصد کے لیے، براہ کرم اپنے پین کارڈ کی تفصیلات فراہم کریں۔",
+        "pan_label": "پین نمبر",
+        "pan_placeholder": "اپنا 10 ہندسوں کا پین نمبر درج کریں",
+        "digilocker_button": "ڈیجی لاکر سے تصدیق کریں",
+        "address_proof_title": "پتے کا ثبوت",
+        "address_proof_description": "اپنے پتے کی تصدیق کے لیے حالیہ یوٹیلیٹی بل یا بینک اسٹیٹمنٹ اپ لوڈ کریں۔",
         "upload_prompt": "اپ لوڈ کرنے کے لیے فائل پر کلک کریں یا گھسیٹیں",
         "submit_button": "تصدیق کے لیے جمع کروائیں"
     },
