change the interface   that the seller and buyer can have a overview of

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -16,17 +16,29 @@
         "feature_3_desc": "গ্রাহকরা কীভাবে আপনার পণ্যগুলির সাথে ইন্টারঅ্যাক্ট করছে তার অন্তর্দৃষ্টি পান।",
         "feature_4_title": "বিপণন হাব",
         "feature_4_desc": "প্রচারমূলক সামগ্রী তৈরি করুন এবং আপনার শিল্পের জন্য বাজারের চাহিদা বুঝুন।",
-        "art_title": "পরবর্তী প্রজন্মের জন্য সমসাময়িক ভারতীয় শিল্প",
-        "art_subtitle": "আধুনিক ভারতীয় শিল্পীদের আবিষ্কার করুন যারা একটি তাজা, প্রাণবন্ত দৃষ্টিভঙ্গির সাথে ঐতিহ্যকে নতুনভাবে সংজ্ঞায়িত করছে।",
-        "art_1_title": "ডিজিটাল পৌরাণিক কাহিনী",
-        "art_1_desc": "মহাকাব্যিক আখ্যানগুলিকে আধুনিক নান্দনিকতার সাথে মিশ্রিত করে ডিজিটাল চিত্রের মাধ্যমে প্রাচীন কাহিনীগুলি পুনরায় বলা হয়েছে।",
-        "art_2_title": "ভারতীয় রাস্তার শিল্প ফিউশন",
-        "art_2_desc": "ভারতীয় মোটিফ দিয়ে ತುಂಬানো গ্রাফিতি এবং স্টেনসিল শিল্প, শহুরে ক্যানভাসে সাহসী বিবৃতি তৈরি করে।",
-        "art_3_title": "মিনিমালিস্ট ফোক",
-        "art_3_desc": "ওয়ারলি এবং গোন্ডের মতো ঐতিহ্যবাহী লোক রূপগুলি, পরিষ্কার লাইন এবং একটি সমসাময়িক রঙের প্যালেট দিয়ে পুনরায় কল্পনা করা হয়েছে।",
+        "art_title": "বিক্রেতাদের জন্য: বিকাশের একটি প্ল্যাটফর্ম",
+        "art_subtitle": "আপনার শিল্প ব্যবসা পরিচালনা করতে এবং گسترده দর্শকের কাছে পৌঁছানোর জন্য আপনার যা কিছু প্রয়োজন।",
+        "overview_seller_1_title": "আপনার সৃষ্টি পরিচালনা করুন",
+        "overview_seller_1_desc": "একটি একক, স্বজ্ঞাত ড্যাশবোর্ড থেকে সহজেই আপনার সমস্ত শিল্পকর্ম আপলোড, শ্রেণীবদ্ধ এবং পরিচালনা করুন।",
+        "overview_seller_2_title": "মূল্যवान अंतর্দৃষ্টি অর্জন করুন",
+        "overview_seller_2_desc": "আমাদের স্মার্ট অ্যানালিটিক্স এবং AI-চালিত প্রতিক্রিয়ার মাধ্যমে গ্রাহকরা কীভাবে আপনার শিল্পের সাথে ইন্টারঅ্যাক্ট করে তা বুঝুন।",
+        "overview_seller_3_title": "সহকর্মীদের সাথে সংযোগ স্থাপন করুন",
+        "overview_seller_3_desc": "ধারণা শেয়ার করতে, সহযোগিতা করতে এবং একসাথে بڑھতে সহকর্মী কারিগরদের একটি প্রাণবন্ত সম্প্রদায়ে যোগ দিন।",
         "payments_title": "আপনার জন্য নমনীয় এবং নিরাপদ অর্থপ্রদান",
         "payments_subtitle": "আমরা আপনার শিল্পের জন্য অর্থপ্রদান গ্রহণকে নির্বিঘ্ন করতে বিভিন্ন ধরণের অর্থপ্রদানের পদ্ধতি সমর্থন করি। সমস্ত লেনদেন নিরাপদ এবং ভারতীয় প্রবিধানের সাথে সঙ্গতিপূর্ণ।",
         "payments_extra": "...এবং আরও অনেক UPI, ক্রেডিট এবং ডেবিট কার্ড বিকল্প।",
+        "payments_feature_1_title": "আপনার জন্য সরলীকৃত অর্থপ্রদান",
+        "payments_feature_1_desc": "যখন একজন গ্রাহک আপনার শিল্প ক্রয় করেন, তখন তারা UPI দিয়ে সহজেই অর্থ প্রদান করতে পারেন। আপনি তাৎক্ষণিকভাবে অর্থ পান। সরল, দ্রুত এবং ন্যায্য।",
+        "payments_feature_2_title": "प्रत्यक्ष ও شفاف",
+        "payments_feature_2_desc": "কোনো লুকানো চার্জ নেই। কোনো বিলম্ব নেই। আপনার কঠোর পরিশ্রমের অর্থ সরাসরি আপনার কাছে পৌঁছায়, যা আপনাকে আপনার ব্যবসা বাড়াতে सशक्त করে।",
+        "overview_buyer_title": "ক্রেতাদের জন্য: अद्वितीय भारतीय শিল্প আবিষ্কার করুন",
+        "overview_buyer_subtitle": "খাঁটি হস্তশিল্পের একটি क्यूरेटेड মার্কেটপ্লেস অন্বেষণ করুন এবং সরাসরি শিল্পীদের সাথে সংযোগ স্থাপন করুন।",
+        "overview_buyer_1_title": "খাঁটি হস্তশিল্প আবিষ্কার করুন",
+        "overview_buyer_1_desc": "ভারত জুড়ে প্রতিভাবান শিল্পীদের থেকে হাজার হাজার अद्वितीय, হস্তনির্মিত আইটেম ব্রাউজ করুন।",
+        "overview_buyer_2_title": "শিল্পীদের সাথে সংযোগ স্থাপন করুন",
+        "overview_buyer_2_desc": "শিল্পের পিছনের গল্পগুলি জানুন এবং সরাসরি নির্মাতাদের সাথে संवाद করুন।",
+        "overview_buyer_3_title": "নিরাপד ও সহজ কেনাকাটা",
+        "overview_buyer_3_desc": "একাধিক অর্থপ্রদানের বিকল্পের সাথে একটি নির্বিঘ্ন এবং নিরাপদ কেনাকাটার অভিজ্ঞতা উপভোগ করুন।",
         "footer": "© {year} Artisan। সর্বস্বত্ব সংরক্ষিত।"
     },
     "login_page": {
@@ -68,14 +80,14 @@
         "login_link": "ইতিমধ্যে একটি অ্যাকাউন্ট আছে? লগইন করুন",
         "legal_disclaimer": "একটি অ্যাকাউন্ট তৈরি করে, আপনি আমাদের শর্তাবলীতে সম্মত হন। অবৈধ কার্যকলাপ আইনি পদক্ষেপের কারণ হতে পারে।",
         "role_label": "আপনার ভূমিকা চয়ন করুন",
-        "role_seller": "বিক্রেতা",
+        "role_seller": "বিক্রেता",
         "role_buyer": "ক্রেতা"
     },
     "dashboard_layout": {
         "menu_dashboard": "ড্যাশবোর্ড",
         "menu_add_product": "পণ্য যোগ করুন",
         "menu_analytics": "বিশ্লেষণ",
-        "menu_marketing": "বিপণন হাব",
+        "menu_marketing": "ביপণন হাব",
         "menu_community": "কমিউনিটি হাব",
         "menu_support": "সমর্থন",
         "menu_live_studio": "লাইভ স্টুডিও",
@@ -95,9 +107,9 @@
         "aadhaar_label": "আধার নম্বর",
         "aadhaar_placeholder": "আপনার ১২-সংখ্যার আধার নম্বর লিখুন",
         "pan_title": "প্যান কার্ড যাচাইকরণ",
-        "pan_description": "ব্যবসার উদ্দেশ্যে, দয়া করে আপনার প্যান কার্ডের বিবরণ প্রদান করুন।",
+        "pan_description": "ব্যবসার উদ্দেশ্যে, দয়া করে আপনার پین کارڈের বিবরণ প্রদান করুন।",
         "pan_label": "প্যান নম্বর",
-        "pan_placeholder": "আপনার ১০-সংখ্যার প্যান নম্বর লিখুন",
+        "pan_placeholder": "আপনার ১০-সংখ্যার پین নম্বর লিখুন",
         "digilocker_button": "ডিজি-লকার দিয়ে যাচাই করুন",
         "address_proof_title": "ঠিকানার প্রমাণ",
         "address_proof_description": "আপনার ঠিকানা নিশ্চিত করতে একটি সাম্প্রতিক ইউটিলিটি বিল বা ব্যাংক স্টেটমেন্ট আপলোড করুন।",
@@ -127,11 +139,11 @@
         "card_cvv_placeholder": "CVV",
         "save_button": "পেমেন্ট সেটিংস সংরক্ষণ করুন",
         "payout_notice_title": "পেআউট সময়সূচী",
-        "payout_notice_description": "দয়া করে মনে রাখবেন: আপনার বিক্রয় থেকে প্রাপ্ত অর্থ 8 দিনের হোল্ডিং পিরিয়ডের পরে আপনার নির্বাচিত অ্যাকাউন্টে স্থানান্তরিত হবে। এটি লেনদেনের নিরাপত্তা নিশ্চিত করার জন্য।"
+        "payout_notice_description": "দয়া করে মনে রাখবেন: আপনার বিক্রয় থেকে প্রাপ্ত অর্থ 8 দিনের হোল্ডিং পিরিয়ডের পরে আপনার নির্বাচিত অ্যাকাউন্টে স্থানান্তরিত হবে। এটি লেনدেনের নিরাপত্তা নিশ্চিত করার জন্য।"
     },
     "community_page": {
         "title": "কমিউনিটি হাব",
-        "description": "সহকর্মী কারিগরদের সাথে সংযোগ স্থাপন করুন, ধারণা শেয়ার করুন এবং সহযোগিতা করুন।",
+        "description": "সহকর্মী কারিগরদের সাথে সংযোগ স্থাপন করুন, ধারণা শেয়ার করুন এবং सहयोग করুন।",
         "follow_button": "অনুসরণ করুন"
     },
     "requests_page": {
@@ -221,3 +233,5 @@
         "checkout_button": "চেকআউটে এগিয়ে যান"
     }
 }
+
+    
