--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -16,17 +16,29 @@
         "feature_3_desc": "ग्राहक आपके उत्पादों के साथ कैसे इंटरैक्ट कर रहे हैं, इस पर जानकारी प्राप्त करें।",
         "feature_4_title": "मार्केटिंग हब",
         "feature_4_desc": "प्रचार सामग्री उत्पन्न करें और अपनी कला के लिए बाजार की मांग को समझें।",
-        "art_title": "अगली पीढ़ी के लिए समकालीन भारतीय कला",
-        "art_subtitle": "आधुनिक भारतीय कलाकारों की खोज करें जो एक ताजा, जीवंत दृष्टिकोण के साथ परंपरा को फिर से परिभाषित कर रहे हैं।",
-        "art_1_title": "डिजिटल पौराणिक कथाएं",
-        "art_1_desc": "महाकाव्य कथाओं को आधुनिक सौंदर्यशास्त्र के साथ मिलाकर डिजिटल चित्रण के माध्यम से प्राचीन कथाओं को फिर से बताया गया।",
-        "art_2_title": "भारतीय स्ट्रीट आर्ट फ्यूजन",
-        "art_2_desc": "भारतीय रूपांकनों से युक्त भित्तिचित्र और स्टेंसिल कला, शहरी कैनवस पर बोल्ड बयान देते हैं।",
-        "art_3_title": "न्यूनतम लोक",
-        "art_3_desc": "वर्ली और गोंड जैसे पारंपरिक लोक रूपों को स्वच्छ रेखाओं और समकालीन रंग पैलेट के साथ फिर से कल्पना की गई।",
+        "art_title": "विक्रेताओं के लिए: बढ़ने के लिए एक मंच",
+        "art_subtitle": "अपने कला व्यवसाय का प्रबंधन करने और व्यापक दर्शकों तक पहुंचने के लिए आपको जो कुछ भी चाहिए।",
+        "overview_seller_1_title": "अपनी रचनाओं का प्रबंधन करें",
+        "overview_seller_1_desc": "एकल, सहज डैशबोर्ड से अपनी सभी कलाकृतियों को आसानी से अपलोड, वर्गीकृत और प्रबंधित करें।",
+        "overview_seller_2_title": "मूल्यवान अंतर्दृष्टि प्राप्त करें",
+        "overview_seller_2_desc": "हमारे स्मार्ट एनालिटिक्स और एआई-संचालित फीडबैक के साथ समझें कि ग्राहक आपकी कला के साथ कैसे इंटरैक्ट करते हैं।",
+        "overview_seller_3_title": "साथियों से जुड़ें",
+        "overview_seller_3_desc": "विचार साझा करने, सहयोग करने और एक साथ बढ़ने के लिए साथी कारीगरों के एक जीवंत समुदाय में शामिल हों।",
         "payments_title": "आपके लिए लचीला और सुरक्षित भुगतान",
         "payments_subtitle": "हम आपकी कला के लिए भुगतान प्राप्त करने को सहज बनाने के लिए भुगतान विधियों की एक विस्तृत श्रृंखला का समर्थन करते हैं। सभी लेनदेन सुरक्षित और भारतीय नियमों के अनुरूप हैं।",
         "payments_extra": "...और कई अन्य UPI, क्रेडिट और डेबिट कार्ड विकल्प।",
+        "payments_feature_1_title": "आपके लिए सरलीकृत भुगतान",
+        "payments_feature_1_desc": "जब कोई ग्राहक आपकी कला खरीदता है, तो वे UPI से आसानी से भुगतान कर सकते हैं। आपको भुगतान तुरंत मिल जाता है। सरल, तेज और निष्पक्ष।",
+        "payments_feature_2_title": "प्रत्यक्ष और पारदर्शी",
+        "payments_feature_2_desc": "कोई छिपा हुआ शुल्क नहीं। कोई देरी नहीं। आपकी मेहनत की कमाई सीधे आप तक पहुँचती है, जो आपको अपना व्यवसाय बढ़ाने के लिए सशक्त बनाती है।",
+        "overview_buyer_title": "खरीदारों के लिए: अद्वितीय भारतीय कला की खोज करें",
+        "overview_buyer_subtitle": "प्रामाणिक शिल्पों के एक क्यूरेटेड मार्केटप्लेस का अन्वेषण करें और सीधे कलाकारों से जुड़ें।",
+        "overview_buyer_1_title": "प्रामाणिक शिल्प खोजें",
+        "overview_buyer_1_desc": "पूरे भारत के प्रतिभाशाली कलाकारों से हजारों अद्वितीय, हस्तनिर्मित वस्तुओं को ब्राउज़ करें।",
+        "overview_buyer_2_title": "कलाकारों से जुड़ें",
+        "overview_buyer_2_desc": "कला के पीछे की कहानियों को जानें और सीधे रचनाकारों के साथ संवाद करें।",
+        "overview_buyer_3_title": "सुरक्षित और आसान खरीदारी",
+        "overview_buyer_3_desc": "कई भुगतान विकल्पों के साथ एक सहज और सुरक्षित खरीदारी अनुभव का आनंद लें।",
         "footer": "© {year} आर्टिसन। सर्वाधिकार सुरक्षित।"
     },
      "login_page": {
@@ -106,7 +118,7 @@
     },
     "payment_settings_page": {
         "title": "भुगतान सेटिंग्स",
-        "description": "आप अपनी बिक्री के लिए भुगतान कैसे प्राप्त करते हैं, इसे कॉन्फ़िगर करें।",
+        "description": "आप अपनी बिक्री के लिए भुगतान कैसे प्राप्त کرتے ہیں, اسے कॉन्फ़िगर करें।",
         "card_title": "भुगतान विधि",
         "card_description": "धनराशि प्राप्त करने के लिए अपनी पसंदीदा विधि चुनें। आपकी जानकारी एन्क्रिप्टेड और सुरक्षित रूप से संग्रहीत है।",
         "upi_label": "UPI आईडी (VPA)",
@@ -221,3 +233,5 @@
         "checkout_button": "चेकआउट के लिए आगे बढ़ें"
     }
 }
+
+    
