--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -16,17 +16,29 @@
         "feature_3_desc": "வாடிக்கையாளர்கள் உங்கள் தயாரிப்புகளுடன் எவ்வாறு தொடர்பு கொள்கிறார்கள் என்பது குறித்த நுண்ணறிவுகளைப் பெறுங்கள்.",
         "feature_4_title": "சந்தைப்படுத்தல் மையம்",
         "feature_4_desc": "விளம்பரப் பொருட்களை உருவாக்கி, உங்கள் கலைக்கான சந்தைத் தேவையையும் புரிந்து கொள்ளுங்கள்.",
-        "art_title": "அடுத்த தலைமுறைக்கான சமகால இந்தியக் கலை",
-        "art_subtitle": "புதிய, துடிப்பான கண்ணோட்டத்துடன் பாரம்பரியத்தை மறுவரையறை செய்யும் நவீன இந்தியக் கலைஞர்களைக் கண்டறியவும்.",
-        "art_1_title": "டிஜிட்டல் புராணம்",
-        "art_1_desc": "காவியக் கதைகளை நவீன அழகியலுடன் கலந்து டிஜிட்டல் иллюстрация மூலம் மீண்டும் சொல்லப்பட்ட பழங்காலக் கதைகள்.",
-        "art_2_title": "இந்தியத் தெருக் கலை இணைவு",
-        "art_2_desc": "இந்திய உருவங்களுடன் உட்செலுத்தப்பட்ட கிராஃபிட்டி மற்றும் ஸ்டென்சில் கலை, நகர்ப்புற கேன்வாஸ்களில் தைரியமான அறிக்கைகளை உருவாக்குகிறது.",
-        "art_3_title": "மினிமலிஸ்ட் நாட்டுப்புறம்",
-        "art_3_desc": "வார்லி மற்றும் கோண்ட் போன்ற பாரம்பரிய நாட்டுப்புற வடிவங்கள், சுத்தமான கோடுகள் மற்றும் சமகால வண்ணத் தட்டுகளுடன் மீண்டும் கற்பனை செய்யப்பட்டன.",
+        "art_title": "விற்பனையாளர்களுக்கு: வளர ஒரு தளம்",
+        "art_subtitle": "உங்கள் கலை வணிகத்தை நிர்வகிக்கவும், பரந்த பார்வையாளர்களைச் சென்றடையவும் உங்களுக்குத் தேவையான அனைத்தும்.",
+        "overview_seller_1_title": "உங்கள் படைப்புகளை நிர்வகிக்கவும்",
+        "overview_seller_1_desc": "உங்கள் எல்லா கலைப்படைப்புகளையும் ஒரே, உள்ளுணர்வு டாஷ்போர்டிலிருந்து எளிதாகப் பதிவேற்றவும், வகைப்படுத்தவும் மற்றும் நிர்வகிக்கவும்.",
+        "overview_seller_2_title": "மதிப்புமிக்க நுண்ணறிவுகளைப் பெறுங்கள்",
+        "overview_seller_2_desc": "எங்கள் ஸ்மார்ட் அனலிட்டிக்ஸ் மற்றும் AI-இயங்கும் பின்னூட்டத்துடன் வாடிக்கையாளர்கள் உங்கள் கலையுடன் எவ்வாறு தொடர்பு கொள்கிறார்கள் என்பதைப் புரிந்து கொள்ளுங்கள்.",
+        "overview_seller_3_title": "சகாக்களுடன் இணையுங்கள்",
+        "overview_seller_3_desc": "யோசனைகளைப் பகிர்ந்து கொள்ளவும், ஒத்துழைக்கவும், ஒன்றாக வளரவும் சக கைவினைஞர்களின் துடிப்பான சமூகத்தில் சேரவும்.",
         "payments_title": "உங்களுக்கான நெகிழ்வான மற்றும் பாதுகாப்பான கொடுப்பனவுகள்",
         "payments_subtitle": "உங்கள் கலைக்கான கொடுப்பனவுகளைப் பெறுவதைத் தடையின்றிச் செய்ய நாங்கள் பரந்த அளவிலான கட்டண முறைகளை ஆதரிக்கிறோம். அனைத்து பரிவர்த்தனைகளும் பாதுகாப்பானவை மற்றும் இந்திய விதிமுறைகளுக்கு இணங்க உள்ளன.",
         "payments_extra": "...மற்றும் பல UPI, கிரெடிட் மற்றும் டெபிட் கார்டு விருப்பங்கள்.",
+        "payments_feature_1_title": "உங்களுக்கான எளிமைப்படுத்தப்பட்ட கொடுப்பனவுகள்",
+        "payments_feature_1_desc": "ஒரு வாடிக்கையாளர் உங்கள் கலையை வாங்கும்போது, அவர்கள் UPI மூலம் எளிதாக பணம் செலுத்தலாம். நீங்கள் உடனடியாக பணம் பெறுவீர்கள். எளிய, வேகமான మరియు ന്യായമായ.",
+        "payments_feature_2_title": "நேரடி & வெளிப்படையான",
+        "payments_feature_2_desc": "மறைக்கப்பட்ட கட்டணங்கள் இல்லை. தாமதங்கள் இல்லை. உங்கள் கடினமாக சம்பாதித்த பணம் நேரடியாக உங்களைச் சென்றடைகிறது, இது உங்கள் வணிகத்தை வளர்க்க உங்களுக்கு அதிகாரம் அளிக்கிறது.",
+        "overview_buyer_title": "வாங்குபவர்களுக்கு: தனித்துவமான இந்தியக் கலையைக் கண்டறியுங்கள்",
+        "overview_buyer_subtitle": "உண்மையான கைவினைப்பொருட்களின் க्युरेट செய்யப்பட మార్కెట్ ప్లేస్ ను అన్వేషించండి మరియు నేరుగా కళాకారులతో కనెక్ట్ అవ్వండి.",
+        "overview_buyer_1_title": "உண்மையான கைவினைப்பொருட்களைக் கண்டறியுங்கள்",
+        "overview_buyer_1_desc": "இந்தியா முழுவதும் உள்ள திறமையான கலைஞர்களிடமிருந்து ஆயிரக்கணக்கான தனித்துவமான, கையால் செய்யப்பட்ட பொருட்களை உலாவவும்.",
+        "overview_buyer_2_title": "கலைஞர்களுடன் இணையுங்கள்",
+        "overview_buyer_2_desc": "கலையின் பின்னணியில் உள்ள கதைகளைக் கற்றுக் கொண்டு, படைப்பாளர்களுடன் நேரடியாகத் தொடர்பு கொள்ளுங்கள்.",
+        "overview_buyer_3_title": "பாதுகாப்பான & எளிதான ஷாப்பிங்",
+        "overview_buyer_3_desc": "பல கட்டண விருப்பங்களுடன் தடையற்ற மற்றும் பாதுகாப்பான ஷாப்பிங் அனுபவத்தை அனுபவிக்கவும்.",
         "footer": "© {year} Artisan. அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டவை."
     },
     "login_page": {
@@ -212,7 +224,7 @@
     "cart_page": {
         "title": "உங்கள் ஷாப்பிங் கார்ட்",
         "empty_title": "உங்கள் கார்ட் காலியாக உள்ளது",
-        "empty_description": "நீங்கள் இன்னும் எந்த பொருட்களையும் சேர்க்கவில்லை என்று தெரிகிறது. நீங்கள் விரும்பும் ஒன்றைக் கண்டுபிடிக்க ஆராயத் தொடங்குங்கள்!",
+        "empty_description": "நீங்கள் இன்னும் எந்த பொருட்களையும் சேர்க்கவில்லை என்று தெரிகிறது. మీరు விரும்பும் ஒன்றைக் கண்டுபிடிக்க ஆராயத் தொடங்குங்கள்!",
         "summary_title": "ஆர்டர் சுருக்கம்",
         "summary_description": "செக் அவுட் செய்வதற்கு முன் உங்கள் ஆர்டரை மதிப்பாய்வு செய்யவும்.",
         "subtotal": "துணை மொத்தம்",
@@ -221,3 +233,5 @@
         "checkout_button": "செக் அவுட்டிற்குச் செல்லவும்"
     }
 }
+
+    
