--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -16,17 +16,29 @@
         "feature_3_desc": "కస్టమర్‌లు మీ ఉత్పత్తులతో ఎలా సంకర్షణ చెందుతున్నారనే దానిపై అంతర్దృష్టులను పొందండి.",
         "feature_4_title": "మార్కెటింగ్ హబ్",
         "feature_4_desc": "ప్రచార సామగ్రిని రూపొందించండి మరియు మీ కళ కోసం మార్కెట్ డిమాండ్‌ను అర్థం చేసుకోండి.",
-        "art_title": "తదుపరి తరం కోసం సమకాలీన భారతీయ కళ",
-        "art_subtitle": "తాజా, ఉత్సాహభరితమైన దృక్పథంతో సంప్రదాయాన్ని పునర్నిర్వచించే ఆధునిక భారతీయ కళాకారులను కనుగొనండి.",
-        "art_1_title": "డిజిటల్ పురాణం",
-        "art_1_desc": "పురాణ కథనాలను ఆధునిక సౌందర్యంతో మిళితం చేసి డిజిటల్ ఇలస్ట్రేషన్ ద్వారా పురాతన కథలు తిరిగి చెప్పబడ్డాయి.",
-        "art_2_title": "ఇండియన్ స్ట్రీట్ ఆర్ట్ ఫ్యూజన్",
-        "art_2_desc": "భారతీయ మూలాంశాలతో నిండిన గ్రాఫిటీ మరియు స్టెన్సిల్ కళ, పట్టణ కాన్వాసులపై ధైర్యమైన ప్రకటనలు చేస్తుంది.",
-        "art_3_title": "మినిమలిస్ట్ జానపదం",
-        "art_3_desc": "వార్లీ మరియు గోండ్ వంటి సాంప్రదాయ జానపద రూపాలు, శుభ్రమైన గీతలు మరియు సమకాలీన రంగుల పాలెట్‌తో పునఃరూపకల్పన చేయబడ్డాయి.",
+        "art_title": "విక్రేతల కోసం: పెరగడానికి ఒక వేదిక",
+        "art_subtitle": "మీ కళ వ్యాపారాన్ని నిర్వహించడానికి మరియు విస్తృత ప్రేక్షకులను చేరుకోవడానికి మీకు కావలసినవన్నీ.",
+        "overview_seller_1_title": "మీ సృష్టిలను నిర్వహించండి",
+        "overview_seller_1_desc": "ఒకే, సహజమైన డాష్‌బోర్డ్ నుండి మీ అన్ని కళాకృతులను సులభంగా అప్‌లోడ్ చేయండి, వర్గీకరించండి మరియు నిర్వహించండి.",
+        "overview_seller_2_title": "విలువైన అంతర్దృష్టులను పొందండి",
+        "overview_seller_2_desc": "మా స్మార్ట్ అనలిటిక్స్ మరియు AI-ఆధారిత అభిప్రాయంతో కస్టమర్‌లు మీ కళతో ఎలా సంకర్షణ చెందుతారో అర్థం చేసుకోండి.",
+        "overview_seller_3_title": "సహచరులతో కనెక్ట్ అవ్వండి",
+        "overview_seller_3_desc": "ఆలోచనలను పంచుకోవడానికి, సహకరించడానికి మరియు కలిసి పెరగడానికి తోటి కళాకారుల ఉత్సాహభరితమైన సంఘంలో చేరండి.",
         "payments_title": "మీ కోసం ఫ్లెక్సిబుల్ & సురక్షిత చెల్లింపులు",
         "payments_subtitle": "మీ కళ కోసం చెల్లింపులను స్వీకరించడానికి అతుకులు లేకుండా చేయడానికి మేము విస్తృత శ్రేణి చెల్లింపు పద్ధతులకు మద్దతు ఇస్తాము. అన్ని లావాదేవీలు సురక్షితమైనవి మరియు భారతీయ నిబంధనలకు అనుగుణంగా ఉంటాయి.",
         "payments_extra": "...మరియు మరిన్ని UPI, క్రెడిట్ మరియు డెబిట్ కార్డ్ ఎంపికలు.",
+        "payments_feature_1_title": "మీ కోసం సరళీకృత చెల్లింపులు",
+        "payments_feature_1_desc": "ఒక కస్టమర్ మీ కళను కొనుగోలు చేసినప్పుడు, వారు UPIతో సులభంగా చెల్లించవచ్చు. మీరు తక్షణమే చెల్లింపును పొందుతారు. సరళమైన, వేగవంతమైన మరియు న్యాయమైనది.",
+        "payments_feature_2_title": "ప్రత్యక్ష & పారదర్శక",
+        "payments_feature_2_desc": "దాచిన ఛార్జీలు లేవు. ఆలస్యం లేదు. మీ కష్టపడి సంపాదించిన డబ్బు నేరుగా మీకు చేరుతుంది, ఇది మీ వ్యాపారాన్ని పెంచుకోవడానికి మిమ్మల్ని శక్తివంతం చేస్తుంది.",
+        "overview_buyer_title": "కొనుగోలుదారుల కోసం: ప్రత్యేకమైన భారతీయ కళను కనుగొనండి",
+        "overview_buyer_subtitle": "ప్రామాణికమైన చేతిపనుల యొక్క క్యూరేటెడ్ మార్కెట్‌ప్లేస్‌ను అన్వేషించండి మరియు నేరుగా కళాకారులతో కనెక్ట్ అవ్వండి.",
+        "overview_buyer_1_title": "ప్రామాణికమైన చేతిపనులను కనుగొనండి",
+        "overview_buyer_1_desc": "భారతదేశం అంతటా ప్రతిభావంతులైన కళాకారుల నుండి వేలాది ప్రత్యేకమైన, చేతితో తయారు చేసిన వస్తువులను బ్రౌజ్ చేయండి.",
+        "overview_buyer_2_title": "కళాకారులతో కనెక్ట్ అవ్వండి",
+        "overview_buyer_2_desc": "కళ వెనుక ఉన్న కథలను తెలుసుకోండి మరియు నేరుగా సృష్టికర్తలతో కమ్యూనికేట్ చేయండి.",
+        "overview_buyer_3_title": "సురక్షిత & సులభమైన షాపింగ్",
+        "overview_buyer_3_desc": "బహుళ చెల్లింపు ఎంపికలతో అతుకులు లేని మరియు సురక్షితమైన షாపింగ్ అనుభవాన్ని ఆస్వాదించండి.",
         "footer": "© {year} ఆర్టిసాన్. అన్ని హక్కులు ప్రత్యేకించబడ్డాయి."
     },
     "login_page": {
@@ -106,7 +118,7 @@
     },
     "payment_settings_page": {
         "title": "చెల్లింపు సెట్టింగ్‌లు",
-        "description": "మీరు మీ అమ్మకాలకు చెల్లింపులను ఎలా స్వీకరిస్తారో కాన్ఫిగర్ చేయండి.",
+        "description": "మీరు మీ అమ్మకాలకు చెల్లింపులను ఎలా స్వీకరిస్తారో కాన్ఫिగర్ చేయండి.",
         "card_title": "చెల్లింపు పద్ధతి",
         "card_description": "నిధులను స్వీకరించడానికి మీకు ఇష్టమైన పద్ధతిని ఎంచుకోండి. మీ సమాచారం గుప్తీకరించబడింది మరియు సురక్షితంగా నిల్వ చేయబడింది.",
         "upi_label": "UPI ID (VPA)",
@@ -221,3 +233,5 @@
         "checkout_button": "చెక్అవుట్‌కు కొనసాగండి"
     }
 }
+
+    
