--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -16,17 +16,29 @@
         "feature_3_desc": "ग्राहक तुमच्या उत्पादनांशी कसे संवाद साधत आहेत याबद्दल अंतर्दृष्टी मिळवा.",
         "feature_4_title": "विपणन केंद्र",
         "feature_4_desc": "प्रचारात्मक साहित्य तयार करा आणि तुमच्या कलेसाठी बाजारातील मागणी समजून घ्या.",
-        "art_title": "पुढील पिढीसाठी समकालीन भारतीय कला",
-        "art_subtitle": "नवीन, उत्साही दृष्टिकोनाने परंपरेला पुन्हा परिभाषित करणाऱ्या आधुनिक भारतीय कलाकारांना शोधा.",
-        "art_1_title": "डिजिटल पौराणिक कथा",
-        "art_1_desc": "महाकाव्य कथांना आधुनिक सौंदर्यशास्त्रासह मिश्रित करून डिजिटल चित्रणाद्वारे प्राचीन कथा पुन्हा सांगितल्या जातात.",
-        "art_2_title": "भारतीय स्ट्रीट आर्ट फ्यूजन",
-        "art_2_desc": "भारतीय आकृतिबंधांनी भरलेले ग्राफिटी आणि स्टेन्सिल आर्ट, शहरी कॅनव्हासवर ठळक विधाने करतात.",
-        "art_3_title": "मिनिमलिस्ट लोक",
-        "art_3_desc": "वारली आणि गोंड सारखे पारंपारिक लोक प्रकार, स्वच्छ रेषा आणि समकालीन रंग पॅलेटसह पुन्हा कल्पना केलेले.",
+        "art_title": "विक्रेत्यांसाठी: वाढीसाठी एक मंच",
+        "art_subtitle": "तुमचा कला व्यवसाय व्यवस्थापित करण्यासाठी आणि व्यापक प्रेक्षकांपर्यंत पोहोचण्यासाठी तुम्हाला आवश्यक असलेले सर्व काही.",
+        "overview_seller_1_title": "तुमच्या निर्मितीचे व्यवस्थापन करा",
+        "overview_seller_1_desc": "एकाच, अंतर्ज्ञानी डॅशबोर्डवरून तुमची सर्व कलाकृती सहजपणे अपलोड, वर्गीकृत आणि व्यवस्थापित करा.",
+        "overview_seller_2_title": "मौल्यवान अंतर्दृष्टी मिळवा",
+        "overview_seller_2_desc": "आमच्या स्मार्ट विश्लेषण आणि AI-चालित अभिप्रायासह ग्राहक तुमच्या कलेशी कसा संवाद साधतात ते समजून घ्या.",
+        "overview_seller_3_title": "समवयस्कांशी कनेक्ट व्हा",
+        "overview_seller_3_desc": "विचार सामायिक करण्यासाठी, सहयोग करण्यासाठी आणि एकत्र वाढण्यासाठी सहकारी कलाकारांच्या उत्साही समुदायात सामील व्हा.",
         "payments_title": "तुमच्यासाठी लवचिक आणि सुरक्षित पेमेंट",
         "payments_subtitle": "तुमच्या कलेसाठी पेमेंट मिळवणे अखंड करण्यासाठी आम्ही पेमेंट पद्धतींची विस्तृत श्रेणी समर्थित करतो. सर्व व्यवहार सुरक्षित आणि भारतीय नियमांनुसार आहेत.",
         "payments_extra": "...आणि बरेच UPI, क्रेडिट आणि डेबिट कार्ड पर्याय.",
+        "payments_feature_1_title": "तुमच्यासाठी सोपे पेमेंट",
+        "payments_feature_1_desc": "जेव्हा एखादा ग्राहक तुमची कला विकत घेतो, तेव्हा ते UPI ने सहज पेमेंट करू शकतात. तुम्हाला त्वरित पेमेंट मिळते. सोपे, जलद आणि न्याय्य.",
+        "payments_feature_2_title": "थेट आणि पारदर्शक",
+        "payments_feature_2_desc": "कोणतेही छुपे शुल्क नाही. कोणताही विलंब नाही. तुमचा कष्टाचा पैसा थेट तुमच्यापर्यंत पोहोचतो, जो तुम्हाला तुमचा व्यवसाय वाढवण्यासाठी सक्षम करतो.",
+        "overview_buyer_title": "खरेदीदारांसाठी: अद्वितीय भारतीय कला शोधा",
+        "overview_buyer_subtitle": "अस्सल हस्तकलांच्या क्युरेट केलेल्या बाजाराचे अन्वेषण करा आणि थेट कलाकारांशी कनेक्ट व्हा.",
+        "overview_buyer_1_title": "अस्सल हस्तकला शोधा",
+        "overview_buyer_1_desc": "संपूर्ण भारतातील प्रतिभावान कलाकारांकडून हजारो अद्वितीय, हस्तनिर्मित वस्तू ब्राउझ करा.",
+        "overview_buyer_2_title": "कलाकारांशी कनेक्ट व्हा",
+        "overview_buyer_2_desc": "कलेमागील कथा जाणून घ्या आणि थेट निर्मात्यांशी संवाद साधा.",
+        "overview_buyer_3_title": "सुरक्षित आणि सुलभ खरेदी",
+        "overview_buyer_3_desc": "एकाधिक पेमेंट पर्यायांसह अखंड आणि सुरक्षित खरेदी अनुभवाचा आनंद घ्या.",
         "footer": "© {year} आर्टिसन. सर्व हक्क राखीव."
     },
     "login_page": {
@@ -221,3 +233,5 @@
         "checkout_button": "चेकआउट करण्यासाठी पुढे जा"
     }
 }
+
+    
