--- a/src/lib/locales/ur.json
+++ b/src/lib/locales/ur.json
@@ -16,17 +16,29 @@
         "feature_3_desc": "صارفین آپ کی مصنوعات کے ساتھ کس طرح تعامل کر رہے ہیں اس پر بصیرت حاصل کریں۔",
         "feature_4_title": "مارکیٹنگ ہب",
         "feature_4_desc": "پروموشنل مواد تیار کریں اور اپنے فن کے لیے مارکیٹ کی طلب کو سمجھیں۔",
-        "art_title": "اگلی نسل کے لیے عصری ہندوستانی فن",
-        "art_subtitle": "جدید ہندوستانی فنکاروں کو دریافت کریں جو ایک تازہ، متحرک نقطہ نظر کے ساتھ روایت کی نئی تعریف کر رہے ہیں۔",
-        "art_1_title": "ڈیجیٹل افسانہ",
-        "art_1_desc": "قدیم کہانیاں ڈیجیٹل चित्रण کے ذریعے دوبارہ بیان کی گئیں، महाकाव्य कथाओं को आधुनिक सौंदर्यशास्त्र کے ساتھ मिलाते ہوئے۔",
-        "art_2_title": "انڈین اسٹریٹ آرٹ فیوژن",
-        "art_2_desc": "ہندوستانی نقشوں سے مزین گرافٹی اور سٹینسل آرٹ، شہری کینوس پر بولڈ بیانات تخلیق کرتے ہیں۔",
-        "art_3_title": "کم سے کم لوک",
-        "art_3_desc": "وارلی اور گونڈ جیسی روایتی لوک شکلیں، صاف لکیروں اور عصری رنگ پیلیٹ کے ساتھ دوبارہ تصور کی گئیں۔",
+        "art_title": "بیچنے والوں کے لیے: بڑھنے کا ایک پلیٹ فارم",
+        "art_subtitle": "اپنے آرٹ کے کاروبار کو منظم کرنے اور وسیع تر سامعین تک پہنچنے کے لیے آپ کو درکار ہر چیز۔",
+        "overview_seller_1_title": "اپنی تخلیقات کا نظم کریں",
+        "overview_seller_1_desc": "ایک ہی، بدیہی ڈیش بورڈ سے اپنے تمام آرٹ ورک کو آسانی سے اپ لوڈ، درجہ بندی اور منظم کریں۔",
+        "overview_seller_2_title": "قابل قدر بصیرت حاصل کریں",
+        "overview_seller_2_desc": "ہمارے سمارٹ تجزیات اور AI سے چلنے والے تاثرات سے سمجھیں کہ گاہک آپ کے فن سے کیسے تعامل کرتے ہیں۔",
+        "overview_seller_3_title": "ساتھیوں سے جڑیں",
+        "overview_seller_3_desc": "خیالات بانٹنے، تعاون کرنے اور ایک ساتھ بڑھنے کے لیے ساتھی کاریگروں کی ایک متحرک کمیونٹی میں شامل ہوں۔",
         "payments_title": "آپ کے لیے لچکدار اور محفوظ ادائیگیاں",
         "payments_subtitle": "ہم آپ کے فن کے لیے ادائیگیوں کو بغیر کسی رکاوٹ کے وصول کرنے کے لیے ادائیگی کے طریقوں کی ایک وسیع رینج کی حمایت کرتے ہیں۔ تمام لین دین محفوظ اور ہندوستانی ضوابط کے مطابق ہیں۔",
         "payments_extra": "...اور بہت سے UPI، کریڈٹ اور ڈیبٹ کارڈ کے اختیارات۔",
+        "payments_feature_1_title": "آپ کے لیے آسان ادائیگیاں",
+        "payments_feature_1_desc": "جب کوئی گاہک آپ کا فن خریدتا ہے، تو وہ UPI کے ذریعے آسانی سے ادائیگی کر سکتا ہے۔ آپ کو ادائیگی فوری طور پر مل جاتی ہے۔ سادہ، تیز اور منصفانہ۔",
+        "payments_feature_2_title": "براہ راست اور شفاف",
+        "payments_feature_2_desc": "کوئی پوشیدہ چارجز نہیں۔ کوئی تاخیر نہیں۔ آپ کی محنت کی کمائی براہ راست آپ تک پہنچتی ہے، جو آپ کو اپنے کاروبار کو بڑھانے کے لیے بااختیار بناتی ہے۔",
+        "overview_buyer_title": "خریداروں کے لیے: منفرد ہندوستانی فن دریافت کریں",
+        "overview_buyer_subtitle": "مستند دستکاری کے ایک کیوریٹڈ بازار کو دریافت کریں اور براہ راست فنکاروں سے جڑیں۔",
+        "overview_buyer_1_title": "مستند دستکاری دریافت کریں",
+        "overview_buyer_1_desc": "پورے ہندوستان کے باصلاحیت فنکاروں سے ہزاروں منفرد، ہاتھ سے بنے ہوئے آئٹمز کو براؤز کریں۔",
+        "overview_buyer_2_title": "فنکاروں سے جڑیں",
+        "overview_buyer_2_desc": "فن کے پیچھے کی کہانیاں جانیں اور براہ راست تخلیق کاروں سے بات چیت کریں۔",
+        "overview_buyer_3_title": "محفوظ اور آسان خریداری",
+        "overview_buyer_3_desc": "متعدد ادائیگی کے اختیارات کے ساتھ ایک ہموار اور محفوظ خریداری کے تجربے سے لطف اٹھائیں۔",
         "footer": "© {year} آرٹیسن۔ جملہ حقوق محفوظ ہیں."
     },
     "login_page": {
@@ -89,7 +101,7 @@
     },
     "verification_page": {
         "title": "اکاؤنٹ کی تصدیق",
-        "description": "اپنی مصنوعات فروخت کرنے اور ادائیگیاں وصول کرنے کے لیے، براہ کرم اپنی شناخت کی تصدیق کریں۔",
+        "description": "اپنی مصنوعات فروخت करने اور ادائیگیاں وصول کرنے کے لیے، براہ کرم اپنی شناخت کی تصدیق کریں۔",
         "aadhaar_title": "آدھار کی تصدیق",
         "aadhaar_description": "اپنی شناخت کی تصدیق کے لیے، براہ کرم اپنی آدھار کی تفصیلات فراہم کریں۔",
         "aadhaar_label": "آدھار نمبر",
@@ -108,7 +120,7 @@
         "title": "ادائیگی کی ترتیبات",
         "description": "آپ اپنی فروخت کے لیے ادائیگیاں کیسے وصول کرتے ہیں اسے ترتیب دیں۔",
         "card_title": "ادائیگی کا طریقہ",
-        "card_description": "فنڈز وصول کرنے کے لیے اپنا پسندیدہ طریقہ منتخب کریں۔ آپ کی معلومات خفیہ اور محفوظ طریقے سے ذخیرہ کی جاتی ہیں۔",
+        "card_description": "فنڈز وصول करने के لیے اپنا پسندیدہ طریقہ منتخب کریں۔ آپ کی معلومات خفیہ اور محفوظ طریقے سے ذخیرہ کی جاتی ہیں۔",
         "upi_label": "UPI ID (VPA)",
         "upi_placeholder": "yourname@bank",
         "bank_account_label": "بینک اکاؤنٹ",
@@ -147,9 +159,9 @@
         "video_preview_title": "لائیو اسٹوڈیو",
         "video_preview_description": "لائیو اسٹریم کے لیے آپ کا کیمرہ فیڈ۔ آپ یہاں جو کچھ دیکھتے ہیں وہی آپ کے سامعین دیکھیں گے۔",
         "camera_access_denied": "کیمرہ تک رسائی سے انکار کر دیا گیا",
-        "enable_camera_prompt": "اس خصوصیت کو استعمال کرنے کے لیے براہ کرم اپنے براؤزر کی ترتیبات میں کیمرہ کی اجازتوں کو فعال کریں۔",
+        "enable_camera_prompt": "اس خصوصیت کو استعمال کرنے के لیے براہ کرم अपने براؤزر کی ترتیبات میں کیمرہ کی اجازتوں کو فعال کریں۔",
         "camera_access_required": "کیمرہ تک رسائی درکار ہے",
-        "allow_camera_access_prompt": "لائیو اسٹوڈیو استعمال کرنے کے لیے براہ کرم اپنے براؤزر میں کیمرہ تک رسائی کی اجازت دیں۔",
+        "allow_camera_access_prompt": "لائیو اسٹوڈیو استعمال करने کے لیے براہ کرم اپنے براؤزر میں کیمرہ تک رسائی کی اجازت دیں۔",
         "stream_controls_title": "اسٹریم کنٹرولز",
         "stream_controls_description": "یہاں سے اپنے لائیو سیشن کا نظم کریں۔",
         "stream_title_label": "اسٹریم کا عنوان",
@@ -173,7 +185,7 @@
         "ask_ai_desc": "نیچے اپنی استفسار درج کریں اور ہمارا AI آپ کی مدد کرنے کی پوری کوشش کرے گا۔",
         "ask_ai_placeholder": "مثلاً میں اپنی پروڈکٹ کی قیمت کیسے بدلوں؟",
         "ask_ai_button": "AI سے پوچھیں",
-        "asking_button": "پوچھ رہا ہے...",
+        "asking_button": "پوچھ रहा ہے...",
         "ai_assistant_title": "AI اسسٹنٹ",
         "ai_assistant_desc": "آپ کی استفسار کا جواب یہاں ہے۔",
         "thinking": "سوچ رہا ہے...",
@@ -187,42 +199,42 @@
             "description": "عام سوالات کے فوری جوابات تلاش کریں۔",
             "items": [
                 {
-                    "question": "کیا آرٹیسن پلیٹ فارم استعمال کرنے کے لیے مفت ہے؟",
-                    "answer": "ہاں، پلیٹ فارم کاریگروں کے لیے مکمل طور پر مفت ہے۔ ہم آپ کی فروخت پر کوئی کمیشن یا فیس وصول نہیں کرتے ہیں۔"
+                    "question": "کیا آرٹیسن پلیٹ فارم استعمال करने کے لیے مفت ہے؟",
+                    "answer": "ہاں، پلیٹ فارم کاریگروں के لیے مکمل طور پر مفت ہے۔ ہم آپ کی فروخت پر کوئی کمیشن یا فیس وصول نہیں کرتے ہیں۔"
                 },
                 {
-                    "question": "مجھے اپنی فروخت کے لیے ادائیگی کیسے ملے گی؟",
-                    "answer": "آپ اپنے ڈیش بورڈ کے 'ادائیگی کی ترتیبات' سیکشن میں اپنی ادائیگی کی ترجیحات ترتیب دے سکتے ہیں۔ ہم UPI اور براہ راست بینک ٹرانسفر کے ذریعے ادائیگیوں کی حمایت کرتے ہیں۔"
+                    "question": "مجھے اپنی فروخت के لیے ادائیگی کیسے ملے گی؟",
+                    "answer": "آپ اپنے ڈیش بورڈ के 'ادائیگی کی ترتیبات' سیکشن میں अपनी ادائیگی کی ترجیحات ترتیب دے سکتے ہیں۔ ہم UPI اور براہ راست بینک ٹرانسفر کے ذریعے ادائیگیوں کی حمایت کرتے ہیں۔"
                 },
                 {
                     "question": "AI ٹولز کیسے کام کرتے ہیں؟",
-                    "answer": "ہمارے AI ٹولز سادہ ہونے کے لیے بنائے گئے ہیں۔ مثال کے طور پر، ایک تفصیل پیدا کرنے کے لیے، صرف ایک پروڈکٹ کی تصویر اپ لوڈ کریں اور 'پیدا کریں' پر کلک کریں۔ AI تصویر کا تجزیہ کرتا ہے اور آپ کے لیے ایک تفصیل اور ٹیگز بناتا ہے۔ اس کے بعد آپ اپنی مرضی کے مطابق متن میں ترمیم کر سکتے ہیں۔"
+                    "answer": "ہمارے AI ٹولز سادہ ہونے کے لیے बनाए گئے ہیں۔ مثال کے طور پر، ایک تفصیل پیدا کرنے کے لیے، صرف ایک پروڈکٹ کی تصویر اپ لوڈ کریں اور 'پیدا کریں' پر کلک کریں۔ AI تصویر کا تجزیہ کرتا ہے اور آپ کے لیے ایک تفصیل اور ٹیگز بناتا ہے۔ اس کے بعد آپ اپنی مرضی کے مطابق متن میں ترمیم کر सकते ہیں۔"
                 },
                 {
                     "question": "کیا میں دوسرے فنکاروں کے ساتھ بات چیت کر سکتا ہوں؟",
-                    "answer": "ہاں! 'کمیونٹی ہب' آپ کے لیے پلیٹ فارم پر دوسرے کاریگروں سے جڑنے، خیالات کا اشتراک کرنے اور تعاون کرنے کی جگہ ہے۔"
+                    "answer": "ہاں! 'کمیونٹی ہب' آپ کے لیے پلیٹ فارم پر دوسرے کاریگروں سے جڑنے، خیالات کا اشتراک करने اور تعاون करने کی جگہ ہے۔"
                 },
                 {
-                    "question": "لائیو جانے کے لیے مجھے اپنا اکاؤنٹ کیوں تصدیق کرنا ہوگا؟",
-                    "answer": "فنکاروں اور سیکھنے والوں سمیت تمام صارفین کے لیے ایک محفوظ اور قابل اعتماد ماحول کو یقینی بنانے کے لیے ہمیں لائیو اسٹریمنگ کے لیے تصدیق کی ضرورت ہے۔ یہ غلط استعمال کو روکنے اور پلیٹ فارم کی سالمیت کو برقرار رکھنے میں مدد کرتا ہے۔"
+                    "question": "لائیو جانے के لیے مجھے اپنا اکاؤنٹ کیوں تصدیق करना ہوگا؟",
+                    "answer": "فنکاروں اور سیکھنے والوں سمیت تمام صارفین के لیے ایک محفوظ اور قابل اعتماد ماحول کو یقینی بنانے کے لیے ہمیں لائیو اسٹریمنگ کے لیے تصدیق کی ضرورت ہے۔ یہ غلط استعمال کو روکنے اور پلیٹ فارم کی سالمیت کو برقرار रखने में مدد کرتا ہے۔"
                 }
             ]
         }
     },
     "suggestions_page": {
         "title": "تجاویز کا خانہ",
-        "description": "آرٹیسن پلیٹ فارم کو بہتر بنانے میں ہماری مدد کے لیے اپنے خیالات کا اشتراک کریں۔",
+        "description": "آرٹیسن پلیٹ فارم کو بہتر بنانے میں हमारी मदद के لیے اپنے خیالات کا اشتراک کریں۔",
         "card_title": "اپنی رائے جمع کروائیں",
-        "card_description": "ہم آپ کے ان پٹ کی قدر کرتے ہیں۔ آپ کے ذہن میں کیا ہے؟",
+        "card_description": "ہم آپ کے ان پٹ کی قدر करते ہیں۔ آپ کے ذہن میں کیا ہے؟",
         "placeholder": "مثال کے طور پر، 'کاش فنکاروں کے پورٹ فولیو بنانے کا کوئی طریقہ ہوتا...'",
         "button": "AI کے ساتھ فیڈ بیک کا تجزیہ کریں",
         "analyzing": "تجزیہ کیا جا रहा ہے...",
         "analysis_title": "AI فیڈ بیک تجزیہ",
-        "analysis_description": "ہمارا AI اس فیڈ بیک کے بارے में کیا سوچتا ہے وہ یہ ہے۔",
+        "analysis_description": "ہمارا AI اس فیڈ بیک کے बारे में کیا سوچتا ہے وہ यह ہے۔",
         "summary_title": "خلاصہ",
         "no_feedback_title": "کوئی فیڈ بیک فراہم نہیں کیا گیا",
-        "no_feedback_description": "براہ کرم جمع کرانے سے پہلے اپنی تجویز درج کریں۔",
-        "success_title": "فیڈ بیک کا تجزیہ کیا گیا!",
+        "no_feedback_description": "براہ کرم جمع کرانے से पहले اپنی تجویز درج کریں۔",
+        "success_title": "فیڈ بیک کا تجزیہ کیا गया!",
         "success_description": "AI نے تجویز پر کارروائی کی ہے۔",
         "error_title": "تجزیہ ناکام",
         "error_description": "فیڈ بیک کا تجزیہ کرنے میں ناکام۔ براہ کرم دوبارہ کوشش کریں"
@@ -230,12 +242,14 @@
     "cart_page": {
         "title": "آپ کی شاپنگ کارٹ",
         "empty_title": "آپ کی کارٹ خالی ہے",
-        "empty_description": "ایسا لگتا ہے کہ آپ نے ابھی تک کوئی آئٹم شامل نہیں کیا ہے۔ اپنی پسند کی کوئی چیز تلاش کرنے کے لیے دریافت کرنا شروع کریں!",
+        "empty_description": "ایسا لگتا ہے کہ آپ نے ابھی تک कोई آئٹم شامل نہیں کیا ہے۔ اپنی پسند کی کوئی چیز تلاش کرنے के لیے دریافت کرنا شروع کریں!",
         "summary_title": "آرڈر کا خلاصہ",
-        "summary_description": "چیک آؤٹ کرنے سے پہلے اپنے آرڈر کا جائزہ لیں۔",
+        "summary_description": "چیک آؤٹ करने سے پہلے اپنے آرڈر کا جائزہ لیں۔",
         "subtotal": "ذیلی کل",
         "shipping": "شپنگ",
         "total": "کل",
         "checkout_button": "چیک آؤٹ پر آگے بڑھیں"
     }
 }
+
+    
